--- a/default.hbs
+++ b/default.hbs
@@ -54,7 +54,7 @@
                         {{#unless @member}}
                             {{#unless @site.members_invite_only}}
                                 <a class="gh-head-link" href="#/portal/signin" data-portal="signin">Sign in</a>
-                                {{!-- Modieid by The Kermudgeon to change text of Subcribe button --}}
+                                {{!-- Modified by The Kermudgeon to change text of Subcribe button --}}
                                 <a class="gh-head-btn gh-btn gh-primary-btn" href="#/portal/signup" data-portal="signup">Subscribe free</a>
                             {{else}}
                                 <a class="gh-head-btn gh-btn gh-primary-btn" href="#/portal/signin" data-portal="signin">Sign in</a>
