--- a/tag.hbs
+++ b/tag.hbs
@@ -40,7 +40,7 @@
             {{/unless}}
         {{/tag}}
 
-        <div class="gh-topic gh-topic-grid">
+        <div class="gh-topic gh-topic-minimal">
             <div class="gh-topic-content gh-feed">
                 {{#foreach posts limit="all"}}
                     {{> "loop-grid"}}
