--- a/tag.hbs
+++ b/tag.hbs
@@ -41,7 +41,7 @@
         {{/tag}}
 
         <div class="gh-topic gh-topic-minimal">
-            <div class="gh-topic-content">
+            <div class="gh-topic-content gh-feed">
                 {{#foreach posts limit="all"}}
                     {{> "loop-minimal"}}
                 {{/foreach}}
