--- a/tag.hbs
+++ b/tag.hbs
@@ -27,7 +27,7 @@
 {{/tag}}
 
 <main class="gh-main gh-outer">
-    <div class="gh-inner">
+    <div style="text-align: center" class="gh-inner">
         {{#tag}}
             {{#unless feature_image}}
                 <section class="gh-pagehead">
@@ -41,7 +41,7 @@
         {{/tag}}
 
         <div class="gh-topic gh-topic-minimal">
-            <div style="text-align: center" class="gh-topic-content gh-feed">
+            <div class="gh-topic-content gh-feed">
                 {{#foreach posts limit="all"}}
                     {{> "loop-minimal"}}
                 {{/foreach}}
