Revert div align changes

--- a/tag.hbs
+++ b/tag.hbs
@@ -27,7 +27,7 @@
 {{/tag}}
 
 <main class="gh-main gh-outer">
-    <div style="text-align: center" class="gh-inner">
+    <div class="gh-inner">
         {{#tag}}
             {{#unless feature_image}}
                 <section class="gh-pagehead">
