--- a/author.hbs
+++ b/author.hbs
@@ -22,10 +22,10 @@
             </section>
         {{/author}}
 
-        <div class="gh-topic gh-topic-minimal">
+        <div class="gh-topic gh-topic-grid">
             <div class="gh-topic-content gh-feed">
                 {{#foreach posts limit="all"}}
-                    {{> "loop-grid"}}
+                    {{> "loop-minimal"}}
                 {{/foreach}}
             </div>
         </div>
