loop-minimal > loop-grid

--- a/author.hbs
+++ b/author.hbs
@@ -25,7 +25,7 @@
         <div class="gh-topic gh-topic-grid">
             <div class="gh-topic-content gh-feed">
                 {{#foreach posts limit="all"}}
-                    {{> "loop-minimal"}}
+                    {{> "loop-grid"}}
                 {{/foreach}}
             </div>
         </div>
