--- a/tag.hbs
+++ b/tag.hbs
@@ -43,7 +43,7 @@
         <div class="gh-topic gh-topic-minimal">
             <div class="gh-topic-content gh-feed">
                 {{#foreach posts limit="all"}}
-                    {{> "loop-minimal"}}
+                    {{> "loop-grid"}}
                 {{/foreach}}
             </div>
         </div>
