--- a/tag.hbs
+++ b/tag.hbs
@@ -40,10 +40,10 @@
             {{/unless}}
         {{/tag}}
 
-        <div class="gh-topic gh-topic-minimal">
+        <div class="gh-topic gh-topic-grid">
             <div class="gh-topic-content gh-feed">
                 {{#foreach posts limit="all"}}
-                    {{> "loop-grid"}}
+                    {{> "loop-minimal"}}
                 {{/foreach}}
             </div>
         </div>
