Revert last change and add title

--- a/toc.hbs
+++ b/toc.hbs
@@ -1,5 +1,6 @@
-
-
+{{!< default}}
+<title>Table of Contents</title>
+       
 <main class="gh-main gh-outer">
     <div class="gh-inner">
         <section class="gh-topic gh-topic-grid">
