Revert "Remove filter for tag query"
This reverts commit 4f73f3c89bf549a502fbfc9acfaef66e039069b0.

--- a/toc.hbs
+++ b/toc.hbs
@@ -4,7 +4,7 @@
     <div class="gh-inner">
         
         {{#if @custom.enter_tag_slugs_for_secondary_sections}}
-            {{#get "tags" limit="all" }}
+            {{#get "tags" limit="all" filter="slug:[{{@custom.enter_tag_slugs_for_secondary_sections}}]"}}
                 {{#if tags}}
                     <div class="gh-topic-list">
                         {{#foreach tags}}
