--- a/toc.hbs
+++ b/toc.hbs
@@ -4,7 +4,7 @@
     <div class="gh-inner">
         
         {{#if @custom.enter_tag_slugs_for_secondary_sections}}
-            {{#get "tags" limit="all" filter="slug:[{{@custom.enter_tag_slugs_for_secondary_sections}}]"}}
+            {{#get "tags" limit="all" filter="slug:-[featured, popular]"}}
                 {{#if tags}}
                     <div class="gh-topic-list">
                         {{#foreach tags}}
