--- a/partials/topic-toc-minimal.hbs
+++ b/partials/topic-toc-minimal.hbs
@@ -9,7 +9,7 @@
     </header>
 
     <div class="gh-topic-content">
-        {{#get "posts" include="tags,authors" filter="tag:{{slug}}" limit="10"}}
+        {{#get "posts" include="tags,authors" filter="tag:{{slug}}" limit="all"}}
             {{#foreach posts}}
                 {{> "loop-minimal"}}
             {{/foreach}}
