--- a/toc.hbs
+++ b/toc.hbs
@@ -4,7 +4,7 @@
     <div class="gh-inner">
 
           <section class="gh-pagehead">
-            <h1 class="gh-pagehead-title">Table of Content</h1>
+            <h1 class="gh-pagehead-title">Table of Contents</h1>
         </section>
           
         {{#if @custom.enter_tag_slugs_for_secondary_sections}}
